WOLO-00 Add example reports and Add translation fields for reports and organisations (#126)
* Add example 'reports '

added also 3 fields for translation in the future

* add correct shift events

* change report to report_pl

* Add description translations for organisation

* WOLO-00 logic for organisation translation

* WOLO-00 logic for report translation

---------
