# src/main/java/pl/pjwstk/woloappapi/model/translation/OrganisationTranslationResponce.java
@@ -1,0 +1,43 @@
+package pl.pjwstk.woloappapi.model.translation;
+
+public class OrganisationTranslationResponce {
+    private String descriptionPL;
+    private String descriptionEN;
+    private String descriptionUA;
+    private String descriptionRU;
+
+    public OrganisationTranslationResponce() {
+    }
+
+    public String getDescriptionPL() {
+        return descriptionPL;
+    }
+
+    public String getDescriptionEN() {
+        return descriptionEN;
+    }
+
+    public String getDescriptionUA() {
+        return descriptionUA;
+    }
+
+    public String getDescriptionRU() {
+        return descriptionRU;
+    }
+
+    public void setDescriptionPL(String descriptionPL) {
+        this.descriptionPL = descriptionPL;
+    }
+
+    public void setDescriptionEN(String descriptionEN) {
+        this.descriptionEN = descriptionEN;
+    }
+
+    public void setDescriptionUA(String descriptionUA) {
+        this.descriptionUA = descriptionUA;
+    }
+
+    public void setDescriptionRU(String descriptionRU) {
+        this.descriptionRU = descriptionRU;
+    }
+}
